--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R:
     person(given = "Ivan",
            family = "Calandra",
            role = c("aut", "cre"),
-           email = "calandra@rgzm.de")
+           email = "ivan.calandra@rgzm.de")
 Description: This research compendium contains all raw data, scripts and outputs used to generate the results of the SSFA comparison paper
 License: MIT + file LICENSE
 ByteCompile: true
@@ -14,16 +14,17 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Imports:
-    doBy (>= 4.6.8),
-    ggplot2 (>= 3.3.2),
+    doBy (>= 4.6.11),
+    ggh4x (>= 0.2.1.9000),
+    ggplot2 (>= 3.3.5),
     holepunch (>= 0.1.28.9000),
-    knitr (>= 1.30),
-    openxlsx (>= 4.2.3),
-    R.utils (>= 2.10.1),
-    renv (>= 0.12.2),
-    rmarkdown (>= 2.5),
+    knitr (>= 1.36),
+    openxlsx (>= 4.2.4),
+    patchwork (≥ 1.1.1)
+    R.utils (>= 2.11.0),
+    renv (>= 0.14.0),
+    rmarkdown (>= 2.11),
     rprojroot (>= 2.0.2),
-    rrtools (>= 0.1.0),
-    tidyverse (>= 1.3.0),
-    tools (>= 4.0.3),
-    usethis (>= 1.6.3)
+    rrtools (>= 0.1.5),
+    tidyverse (>= 1.3.1),
+    usethis (>= 2.1.3)
